--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     /* 70% screen height - return to 100vh if deleting border*/
     height: 100vh;
-    /*background-image: url("iStock-536507269.jpg");*/
+    background-image: url("iStock-536507269.jpg");
     /*Start ORD Border
     border-style: solid;
     border-color: #e51f1f;
@@ -58,18 +58,18 @@ input {
     border-bottom: 2px solid #9b9b9b;
     outline: 0;
     font-size: 1.3rem;
-    /*color: #fff;*/
+    color: #fff;
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
     text-align: center;
 }
 
-/*button {
+button {
     border-radius: 10px;
     height: 60%;
     width: 40%;
-}*/
+}
 
 /* CSS */
 .styled {
